# cdaw

./: .clang-format  .gitignore  CMakeLists.txt
include/: arena.h  linux_gl_context.h  str.h  typedefs.h
src/: main.c
src/core/: str.c
src/platform/linux/: linux_gl_context.c
